--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "antd": "^4.13.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echart": "^0.1.3",
+    "umi-request": "^1.3.5",
     "vue": "^3.0.0",
+    "vue-axios": "^3.2.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
